fix attempt #1 on mobile header image

--- a/style.css
+++ b/style.css
@@ -286,18 +286,12 @@ section {
     max-width: 700px;
   }}
 
-@media only screen and (max-width: 900px) and (min-width: 500px) {
+@media only screen and (max-width: 900px) and (min-width: 350px) {
   header {
     height:70vh;
     background-color: #ffe61e;
     background-image:  url("https://stephenkender.com/splashbg_mobile.png");
-  /*PARRRRRRRAAAAALLLLLLLLLAAAAAXXXXXXXX*/
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
       /* Now this will center the header text*/
-      
     display: flex;
     flex-flow: column;
   }
